<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>jooq-masterclass</artifactId>
    <groupId>com.packtpub.jooq.masterclass</groupId>
    <version>1.0.0</version>
  </parent>

  <groupId>com.packtpub.jooq.masterclass.customizations</groupId>
  <artifactId>jooq-customizations</artifactId>
  <version>1.0.0</version>

  <packaging>pom</packaging>

  <properties>
    <skipTests>true</skipTests>
    <jdk.version>17</jdk.version>
    <jooq-version>3.18.7</jooq-version>

    <flywaydb-version>9.21.0</flywaydb-version>
    <flyway-maven-version>9.22.3</flyway-maven-version>
    <spring.boot-version>3.2.0</spring.boot-version>
    <codehaus.mojo.version>1.1.0</codehaus.mojo.version>
    <maven.inkoker-version>3.6.0</maven.inkoker-version>
    <maven.failsafe-version>3.2.1</maven.failsafe-version>
    <maven.surefire-version>3.2.2</maven.surefire-version>
    <camel.spring.boot-version>4.2.0</camel.spring.boot-version>
    <maven.compiler.plugin-version>3.11.0</maven.compiler.plugin-version>
  </properties>

  <name>JOOQ :: Masterclass :: Custom Setups</name>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot-version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.camel.springboot</groupId>
        <artifactId>camel-spring-boot-bom</artifactId>
        <version>${camel.spring.boot-version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq</artifactId>
      <version>${jooq-version}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
      <version>${flywaydb-version}</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire-version}</version>
        <executions>
          <execution>
            <id>default-test</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-invoker-plugin</artifactId>
        <version>${maven.inkoker-version}</version>
        <configuration>
          <skipInstallation>${invoker.skip}</skipInstallation>
          <skipInvocation>${invoker.skip}</skipInvocation>
          <mavenOpts>-Xmx64m -XshowSettings</mavenOpts>
          <showVersion>true</showVersion>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven.failsafe-version}</version>
        <configuration>
          <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
          <failIfNoTests>false</failIfNoTests>
          <skipITs>true</skipITs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin-version}</version>
        <configuration>
          <maxmem>512M</maxmem>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <!-- Spring Boot -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring.boot-version}</version>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <modules>
    <module>write-typesafesql</module>
  </modules>
</project>
